Translate header text to Spanish for localization

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="max-w-4xl mx-auto text-center relative z-10">
             <h1 class="text-6xl md:text-8xl font-black text-white mb-8 tracking-tighter leading-[0.9]">
-                Tuning for <br><span class="text-gradient">success.</span>
+                Afinando para el <br><span class="text-gradient">éxito.</span>
             </h1>
             <p class="text-lg md:text-xl text-slate-400 mb-12 max-w-2xl mx-auto font-medium leading-relaxed">
                 Potenciamos tu flujo de trabajo con ingeniería de software y transformamos tu identidad visual con
