Refactor design structure: move Empresarial and Rotulados pages to separate directories and update links

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                     <h3 class="text-2xl font-black text-white mb-6 uppercase tracking-tight">Diseño <br> Empresarial
                     </h3>
-                    <a href="design/empresarial.html"
+                    <a href="design/empresarial/index.html"
                         class="group/link inline-flex items-center text-[10px] font-black text-white uppercase tracking-[0.2em] hover:text-blue-400 transition-colors">
                         Ver Servicios <i data-lucide="arrow-up-right"
                             class="ml-2 w-4 h-4 group-hover/link:-translate-y-1 group-hover/link:translate-x-1 transition-transform"></i>
@@ -120,7 +120,7 @@
                         <i data-lucide="bike" class="w-8 h-8 text-orange-500"></i>
                     </div>
                     <h3 class="text-2xl font-black text-white mb-6 uppercase tracking-tight">Rotulado <br> de Motos</h3>
-                    <a href="design/rotulados.html"
+                    <a href="design/rotulados/index.html"
                         class="group/link inline-flex items-center text-[10px] font-black text-white uppercase tracking-[0.2em] hover:text-orange-400 transition-colors">
                         Ver Trabajos <i data-lucide="arrow-up-right"
                             class="ml-2 w-4 h-4 group-hover/link:-translate-y-1 group-hover/link:translate-x-1 transition-transform"></i>
