--- a/labs/hivemicro.html
+++ b/labs/hivemicro.html
@@ -42,7 +42,7 @@
         <aside class="space-y-6">
             <div class="glass-panel p-8 rounded-[2rem] border-emerald-500/20 shadow-2xl">
                 <h3 class="text-white font-black mb-6 uppercase text-sm tracking-widest">Adquirir Herramienta</h3>
-                <p class="text-slate-400 text-sm mb-8">El acceso al script es personalizado para asegurar su correcto funcionamiento.</p>
+                <p class="text-slate-400 text-sm mb-8">El acceso a la herramienta es personalizado para asegurar su correcto funcionamiento.</p>
                 <a href="https://t.me/jeanpirelag" class="flex items-center justify-center w-full bg-[#24A1DE] text-white font-black py-5 rounded-2xl transition-all hover:shadow-[0_10px_30px_-10px_rgba(36,161,222,0.5)] uppercase text-[10px] tracking-widest">
                     Contactar por Telegram <i data-lucide="send" class="w-4 h-4 ml-2"></i>
                 </a>
