--- a/design/rotulados/index.html
+++ b/design/rotulados/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="min-h-screen hero-orange">
     <nav class="p-8 max-w-6xl mx-auto">
-        <a href="../index.html" class="flex items-center text-[10px] font-black tracking-[0.2em] text-slate-500 hover:text-white transition group">
+        <a href="/index.html" class="flex items-center text-[10px] font-black tracking-[0.2em] text-slate-500 hover:text-white transition group">
             <i data-lucide="arrow-left" class="w-4 h-4 mr-2 group-hover:-translate-x-1 transition"></i> VOLVER
         </a>
     </nav>
