--- a/design/rotulados/index.html
+++ b/design/rotulados/index.html
@@ -8,34 +8,70 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
-        body { font-family: 'Plus Jakarta Sans', sans-serif; background-color: #0b0f1a; color: #cbd5e1; }
-        .hero-orange { background: radial-gradient(circle at center, rgba(249, 115, 22, 0.05) 0%, transparent 70%); }
+        body { 
+            font-family: 'Plus Jakarta Sans', sans-serif; 
+            background-color: #ffffff; /* Cambio a blanco total */
+            color: #1f2937; 
+        }
+        /* Grid de fondo sutil para dar aspecto de mesa de diseño */
+        .bg-grid {
+            background-image: radial-gradient(#e5e7eb 1px, transparent 1px);
+            background-size: 30px 30px;
+        }
     </style>
 </head>
-<body class="min-h-screen hero-orange">
+<body class="min-h-screen bg-grid">
     <nav class="p-8 max-w-6xl mx-auto">
-        <a href="/index.html" class="flex items-center text-[10px] font-black tracking-[0.2em] text-slate-500 hover:text-white transition group">
+        <a href="/index.html" class="flex items-center text-[10px] font-black tracking-[0.2em] text-slate-400 hover:text-orange-600 transition group">
             <i data-lucide="arrow-left" class="w-4 h-4 mr-2 group-hover:-translate-x-1 transition"></i> VOLVER
         </a>
     </nav>
 
     <main class="max-w-6xl mx-auto px-6 py-12">
         <header class="mb-20">
-            <h1 class="text-6xl font-black text-white mb-6 tracking-tighter uppercase italic">Vinyl <br><span class="text-orange-500">Customs.</span></h1>
-            <p class="text-lg text-slate-400 max-w-2xl">Personalización extrema. Kits gráficos en vinilo de alta resistencia para calle y competición.</p>
+            <div class="flex items-center gap-2 mb-4">
+                <span class="h-[2px] w-8 bg-orange-500"></span>
+                <span class="text-[10px] font-bold tracking-[0.3em] uppercase text-orange-500">Premium Wrapping</span>
+            </div>
+            <h1 class="text-7xl md:text-8xl font-black text-slate-900 mb-6 tracking-tighter uppercase italic leading-[0.85]">
+                Vinyl <br><span class="text-orange-500">Customs.</span>
+            </h1>
+            <p class="text-xl text-slate-500 max-w-2xl leading-relaxed">
+                Personalización de alto rendimiento. Diseñamos y aplicamos kits gráficos en vinilo de alta resistencia para calle y competición.
+            </p>
         </header>
 
-        <div class="grid grid-cols-2 md:grid-cols-3 gap-6 mb-20">
-            <div class="aspect-square bg-white/5 border border-white/10 rounded-[2rem] flex items-center justify-center italic text-slate-700 font-black text-xs">FOTO_MOTO_1</div>
-            <div class="aspect-square bg-white/5 border border-white/10 rounded-[2rem] flex items-center justify-center italic text-slate-700 font-black text-xs">FOTO_MOTO_2</div>
-            <div class="aspect-square bg-white/5 border border-white/10 rounded-[2rem] flex items-center justify-center italic text-slate-700 font-black text-xs">FOTO_MOTO_3</div>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-20">
+            <div class="group relative overflow-hidden bg-slate-100 rounded-[2.5rem] aspect-[4/5] flex items-center justify-center border border-slate-200 hover:border-orange-500/50 transition-all duration-500">
+                <span class="italic text-slate-300 font-black text-xs group-hover:scale-110 transition">FOTO_PROYECTO_1</span>
+                <div class="absolute bottom-6 left-6 opacity-0 group-hover:opacity-100 transition-opacity">
+                    <span class="bg-white px-4 py-2 rounded-full text-[10px] font-bold shadow-sm">BERA KAVAK / FULL WRAP</span>
+                </div>
+            </div>
+            <div class="group relative overflow-hidden bg-slate-100 rounded-[2.5rem] aspect-[4/5] flex items-center justify-center border border-slate-200 hover:border-orange-500/50 transition-all duration-500">
+                <span class="italic text-slate-300 font-black text-xs group-hover:scale-110 transition">FOTO_PROYECTO_2</span>
+                <div class="absolute bottom-6 left-6 opacity-0 group-hover:opacity-100 transition-opacity">
+                    <span class="bg-white px-4 py-2 rounded-full text-[10px] font-bold shadow-sm">KADI POWER / KITS</span>
+                </div>
+            </div>
+            <div class="group relative overflow-hidden bg-slate-100 rounded-[2.5rem] aspect-[4/5] flex items-center justify-center border border-slate-200 hover:border-orange-500/50 transition-all duration-500">
+                <span class="italic text-slate-300 font-black text-xs group-hover:scale-110 transition">FOTO_PROYECTO_3</span>
+                <div class="absolute bottom-6 left-6 opacity-0 group-hover:opacity-100 transition-opacity">
+                    <span class="bg-white px-4 py-2 rounded-full text-[10px] font-bold shadow-sm">EK RK6 / RACING</span>
+                </div>
+            </div>
         </div>
 
-        <div class="bg-orange-600/10 border border-orange-500/20 p-12 rounded-[3rem] text-center">
-            <h2 class="text-white font-black text-3xl mb-6 tracking-tight uppercase">¿Listo para cambiar el look?</h2>
-            <p class="text-slate-400 mb-10 max-w-xl mx-auto italic text-sm">Envíame el modelo de tu moto y una idea de lo que buscas para enviarte un presupuesto personalizado.</p>
-            <a href="https://t.me/jeanpirelag" class="inline-flex items-center bg-orange-500 text-white font-black px-12 py-5 rounded-2xl hover:bg-orange-400 transition-all uppercase text-[10px] tracking-widest">
-                Consultar por Telegram <i data-lucide="bike" class="ml-2 w-4 h-4"></i>
+        <div class="bg-slate-900 p-10 md:p-20 rounded-[4rem] text-center shadow-2xl shadow-slate-200 relative overflow-hidden">
+            <div class="absolute top-0 right-0 w-64 h-64 bg-orange-500/10 blur-[100px] rounded-full"></div>
+            
+            <h2 class="text-white font-black text-4xl mb-6 tracking-tight uppercase italic">¿Listo para cambiar el look?</h2>
+            <p class="text-slate-400 mb-10 max-w-xl mx-auto text-sm leading-relaxed">
+                Envíame el modelo de tu moto y una idea de lo que buscas para enviarte un presupuesto personalizado.
+            </p>
+            <a href="https://t.me/jeanpirelag" class="inline-flex items-center bg-orange-500 text-white font-black px-12 py-6 rounded-2xl hover:bg-white hover:text-orange-500 transition-all duration-300 uppercase text-[11px] tracking-[0.2em] group">
+                Consultar por Telegram 
+                <i data-lucide="send" class="ml-2 w-4 h-4 group-hover:translate-x-1 group-hover:-translate-y-1 transition"></i>
             </a>
         </div>
     </main>
