Update index.html: reorder title for clarity, enhance Tech Support section with new content and links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melodico | Tech Support, Labs & Design</title>
+    <title>Melodico | Labs, Design & Tech Support</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap"
         rel="stylesheet">
@@ -21,9 +21,9 @@
             </div>
 
             <div class="hidden md:flex items-center space-x-10 text-[10px] font-black tracking-[0.3em] text-slate-400">
-                <a href="#support" class="hover:text-indigo-400 transition-colors uppercase">Soporte</a>
                 <a href="#labs" class="hover:text-emerald-400 transition-colors uppercase">Labs</a>
                 <a href="#design" class="hover:text-blue-400 transition-colors uppercase">Design</a>
+                <a href="#support" class="hover:text-indigo-400 transition-colors uppercase">Soporte</a>
             </div>
 
             <div class="flex items-center space-x-6">
@@ -54,106 +54,27 @@
             </p>
 
             <div class="flex flex-col sm:flex-row justify-center gap-4 md:gap-6">
-
-                <a href="#support"
-                    class="bg-indigo-600 hover:bg-indigo-500 text-white px-8 py-5 rounded-2xl font-black text-xs uppercase tracking-widest transition-all hover:shadow-[0_0_30px_-5px_rgba(79,70,229,0.4)] hover:-translate-y-1 text-center">
-                    Explorar Soporte Técnico
-                </a>
-
                 <a href="#labs"
                     class="bg-emerald-600 hover:bg-emerald-500 text-white px-8 py-5 rounded-2xl font-black text-xs uppercase tracking-widest transition-all hover:shadow-[0_0_30px_-5px_rgba(16,185,129,0.4)] hover:-translate-y-1 text-center">
                     Explorar Labs
                 </a>
-
                 <a href="#design"
                     class="bg-slate-800/50 hover:bg-slate-800 text-white px-8 py-5 rounded-2xl font-black text-xs uppercase tracking-widest transition-all border border-white/10 hover:-translate-y-1 text-center">
                     Explorar Design
+                </a>
+                <a href="#support"
+                    class="bg-indigo-600 hover:bg-indigo-500 text-white px-8 py-5 rounded-2xl font-black text-xs uppercase tracking-widest transition-all hover:shadow-[0_0_30px_-5px_rgba(79,70,229,0.4)] hover:-translate-y-1 text-center">
+                    Soporte Técnico
                 </a>
             </div>
         </div>
     </header>
 
-    <section id="support" class="py-32 px-6 max-w-6xl mx-auto scroll-mt-24">
-        <div class="mb-20">
-            <h2 class="text-4xl font-black text-white mb-4 italic text-center md:text-left">Tech Support<span
-                    class="text-indigo-500">_</span></h2>
-            <p class="text-slate-400 max-w-2xl text-center md:text-left">Soluciones de hardware y software, desde
-                mantenimiento físico hasta
-                despliegue de entornos Linux.</p>
-        </div>
-
-        <div class="grid md:grid-cols-3 gap-8">
-            <div
-                class="glass-card p-8 rounded-[2.5rem] border-white/5 hover:border-indigo-500/30 transition-all flex flex-col justify-between">
-                <div>
-                    <div class="w-12 h-12 bg-indigo-500/10 rounded-xl flex items-center justify-center mb-6">
-                        <i data-lucide="monitor-dot" class="w-6 h-6 text-indigo-500"></i>
-                    </div>
-                    <h3 class="text-xl font-black text-white mb-3 tracking-tight">Físico & Remoto</h3>
-                    <ul class="text-sm text-slate-400 space-y-2 mb-8">
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-indigo-500"></i>
-                            Limpieza profunda</li>
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-indigo-500"></i>
-                            Soporte Remoto</li>
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-indigo-500"></i>
-                            Diagnóstico</li>
-                    </ul>
-                </div>
-                <a href="https://t.me/jeanpirelag" target="_blank"
-                    class="w-full py-4 bg-indigo-500/10 hover:bg-indigo-500 text-indigo-400 hover:text-white rounded-2xl text-[10px] font-black uppercase tracking-widest text-center transition-all">Solicitar
-                    Soporte</a>
-            </div>
-
-            <div
-                class="glass-card p-8 rounded-[2.5rem] border-white/5 hover:border-emerald-500/30 transition-all flex flex-col justify-between">
-                <div>
-                    <div class="w-12 h-12 bg-emerald-500/10 rounded-xl flex items-center justify-center mb-6">
-                        <i data-lucide="terminal" class="w-6 h-6 text-emerald-500"></i>
-                    </div>
-                    <h3 class="text-xl font-black text-white mb-3 tracking-tight">Linux OS</h3>
-                    <ul class="text-sm text-slate-400 space-y-2 mb-8">
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-emerald-500"></i>
-                            Instalación de Distros</li>
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-emerald-500"></i>
-                            Configuración Servidores</li>
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-emerald-500"></i>
-                            Dual Boot</li>
-                    </ul>
-                </div>
-                <a href="https://t.me/jeanpirelag" target="_blank"
-                    class="w-full py-4 bg-emerald-500/10 hover:bg-emerald-500 text-emerald-400 hover:text-white rounded-2xl text-[10px] font-black uppercase tracking-widest text-center transition-all">Solicitar
-                    Soporte</a>
-            </div>
-
-            <div
-                class="glass-card p-8 rounded-[2.5rem] border-white/5 hover:border-orange-500/30 transition-all flex flex-col justify-between">
-                <div>
-                    <div class="w-12 h-12 bg-orange-500/10 rounded-xl flex items-center justify-center mb-6">
-                        <i data-lucide="layers" class="w-6 h-6 text-orange-500"></i>
-                    </div>
-                    <h3 class="text-xl font-black text-white mb-3 tracking-tight">Software</h3>
-                    <ul class="text-sm text-slate-400 space-y-2 mb-8">
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-orange-500"></i>
-                            Apps de Diseño</li>
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-orange-500"></i>
-                            Office & Dev Tools</li>
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-orange-500"></i>
-                            Optimización</li>
-                    </ul>
-                </div>
-                <a href="https://t.me/jeanpirelag" target="_blank"
-                    class="w-full py-4 bg-orange-500/10 hover:bg-orange-500 text-orange-400 hover:text-white rounded-2xl text-[10px] font-black uppercase tracking-widest text-center transition-all">Solicitar
-                    Soporte</a>
-            </div>
-        </div>
-    </section>
-
     <section id="labs" class="py-32 px-6 max-w-6xl mx-auto scroll-mt-24">
         <div class="grid md:grid-cols-5 gap-16 items-center">
             <div class="md:col-span-2">
                 <h2 class="text-4xl font-black text-white mb-6 italic">Labs<span class="text-emerald-500">_</span></h2>
-                <p class="text-slate-400 leading-relaxed mb-8">Herramientas de automatización y scripts personalizados.
-                </p>
+                <p class="text-slate-400 leading-relaxed mb-8">Herramientas de automatización y scripts personalizados.</p>
                 <a href="labs/index.html"
                     class="inline-flex items-center text-[10px] font-black text-white uppercase tracking-[0.3em] hover:text-emerald-400 transition-colors group">
                     Explorar todos los proyectos
@@ -169,9 +90,7 @@
                     </div>
                     <h3 class="text-3xl font-black text-white mb-4 tracking-tight">HiveMicro <span
                             class="text-emerald-500 font-light italic">Enhancer</span></h3>
-                    <p class="text-slate-400 mb-8 leading-relaxed">Optimización avanzada para maximizar tus ingresos por
-                        hora.</p>
-
+                    <p class="text-slate-400 mb-8 leading-relaxed">Optimización avanzada para maximizar tus ingresos por hora.</p>
                     <a href="labs/hivemicro.html"
                         class="inline-flex items-center justify-center w-full bg-white text-black hover:bg-emerald-500 hover:text-white text-[10px] font-black py-5 rounded-2xl transition-all duration-300 uppercase tracking-[0.2em] group/btn shadow-xl">
                         Detalles del Proyecto
@@ -191,17 +110,13 @@
             </div>
 
             <div class="grid md:grid-cols-2 gap-10">
-                <div
-                    class="glass-card p-12 rounded-[3rem] group hover:-translate-y-2 transition-all duration-500 border-white/5 hover:border-blue-500/20 flex flex-col justify-between">
+                <div class="glass-card p-12 rounded-[3rem] group hover:-translate-y-2 transition-all duration-500 border-white/5 hover:border-blue-500/20 flex flex-col justify-between">
                     <div>
                         <div class="w-16 h-16 bg-blue-500/10 rounded-2xl flex items-center justify-center mb-10">
                             <i data-lucide="palette" class="w-8 h-8 text-blue-500"></i>
                         </div>
-                        <h3 class="text-2xl font-black text-white mb-4 uppercase tracking-tight">Diseño <br> Empresarial
-                        </h3>
-                        <p class="text-slate-400 mb-6 leading-relaxed">Construimos identidades visuales sólidas que
-                            comunican profesionalismo y confianza.</p>
-
+                        <h3 class="text-2xl font-black text-white mb-4 uppercase tracking-tight">Diseño <br> Empresarial</h3>
+                        <p class="text-slate-400 mb-6 leading-relaxed">Construimos identidades visuales sólidas que comunican profesionalismo.</p>
                         <ul class="text-[11px] font-bold text-slate-500 uppercase tracking-widest space-y-3 mb-10">
                             <li class="flex items-center group-hover:text-blue-400 transition-colors">
                                 <span class="w-1.5 h-1.5 rounded-full bg-blue-500 mr-3"></span> Logotipos & Branding
@@ -209,12 +124,8 @@
                             <li class="flex items-center group-hover:text-blue-400 transition-colors">
                                 <span class="w-1.5 h-1.5 rounded-full bg-blue-500 mr-3"></span> Papelería Corporativa
                             </li>
-                            <li class="flex items-center group-hover:text-blue-400 transition-colors">
-                                <span class="w-1.5 h-1.5 rounded-full bg-blue-500 mr-3"></span> Social Media Kits
-                            </li>
                         </ul>
                     </div>
-
                     <a href="design/empresarial/index.html"
                         class="group/link inline-flex items-center text-[10px] font-black text-white uppercase tracking-[0.2em] hover:text-blue-400 transition-colors">
                         Ver Servicios <i data-lucide="arrow-up-right"
@@ -222,32 +133,22 @@
                     </a>
                 </div>
 
-                <div
-                    class="glass-card p-12 rounded-[3rem] group hover:-translate-y-2 transition-all duration-500 border-white/5 hover:border-orange-500/20 flex flex-col justify-between">
+                <div class="glass-card p-12 rounded-[3rem] group hover:-translate-y-2 transition-all duration-500 border-white/5 hover:border-orange-500/20 flex flex-col justify-between">
                     <div>
                         <div class="w-16 h-16 bg-orange-500/10 rounded-2xl flex items-center justify-center mb-10">
                             <i data-lucide="bike" class="w-8 h-8 text-orange-500"></i>
                         </div>
-                        <h3 class="text-2xl font-black text-white mb-4 uppercase tracking-tight">Rotulado <br> de Motos
-                        </h3>
-                        <p class="text-slate-400 mb-6 leading-relaxed">Personalización premium de alto impacto para tu
-                            vehículo con materiales de alta gama.</p>
-
+                        <h3 class="text-2xl font-black text-white mb-4 uppercase tracking-tight">Rotulado <br> de Motos</h3>
+                        <p class="text-slate-400 mb-6 leading-relaxed">Personalización premium de alto impacto con materiales de alta gama.</p>
                         <ul class="text-[11px] font-bold text-slate-500 uppercase tracking-widest space-y-3 mb-10">
                             <li class="flex items-center group-hover:text-orange-400 transition-colors">
                                 <span class="w-1.5 h-1.5 rounded-full bg-orange-500 mr-3"></span> Kits Gráficos Custom
                             </li>
                             <li class="flex items-center group-hover:text-orange-400 transition-colors">
-                                <span class="w-1.5 h-1.5 rounded-full bg-orange-500 mr-3"></span> Wrapping Parcial /
-                                Total
-                            </li>
-                            <li class="flex items-center group-hover:text-orange-400 transition-colors">
-                                <span class="w-1.5 h-1.5 rounded-full bg-orange-500 mr-3"></span> Laminados de
-                                Protección
+                                <span class="w-1.5 h-1.5 rounded-full bg-orange-500 mr-3"></span> Laminados Pro
                             </li>
                         </ul>
                     </div>
-
                     <a href="design/rotulados/index.html"
                         class="group/link inline-flex items-center text-[10px] font-black text-white uppercase tracking-[0.2em] hover:text-orange-400 transition-colors">
                         Ver Trabajos <i data-lucide="arrow-up-right"
@@ -258,15 +159,65 @@
         </div>
     </section>
 
+    <section id="support" class="py-32 px-6 max-w-6xl mx-auto scroll-mt-24">
+        <div class="mb-20">
+            <h2 class="text-4xl font-black text-white mb-4 italic text-center md:text-left">Tech Support<span
+                    class="text-indigo-500">_</span></h2>
+            <p class="text-slate-400 max-w-2xl text-center md:text-left">Soluciones de hardware y software para garantizar tu productividad.</p>
+        </div>
+
+        <div class="grid md:grid-cols-3 gap-8">
+            <div class="glass-card p-8 rounded-[2.5rem] border-white/5 hover:border-indigo-500/30 transition-all flex flex-col justify-between">
+                <div>
+                    <div class="w-12 h-12 bg-indigo-500/10 rounded-xl flex items-center justify-center mb-6">
+                        <i data-lucide="monitor-dot" class="w-6 h-6 text-indigo-500"></i>
+                    </div>
+                    <h3 class="text-xl font-black text-white mb-3 tracking-tight">Físico & Remoto</h3>
+                    <ul class="text-sm text-slate-400 space-y-2 mb-8">
+                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-indigo-500"></i> Limpieza profunda</li>
+                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-indigo-500"></i> Soporte Remoto</li>
+                    </ul>
+                </div>
+                <a href="https://t.me/jeanpirelag" target="_blank" class="w-full py-4 bg-indigo-500/10 hover:bg-indigo-500 text-indigo-400 hover:text-white rounded-2xl text-[10px] font-black uppercase tracking-widest text-center transition-all">Solicitar Soporte</a>
+            </div>
+
+            <div class="glass-card p-8 rounded-[2.5rem] border-white/5 hover:border-emerald-500/30 transition-all flex flex-col justify-between">
+                <div>
+                    <div class="w-12 h-12 bg-emerald-500/10 rounded-xl flex items-center justify-center mb-6">
+                        <i data-lucide="terminal" class="w-6 h-6 text-emerald-500"></i>
+                    </div>
+                    <h3 class="text-xl font-black text-white mb-3 tracking-tight">Linux OS</h3>
+                    <ul class="text-sm text-slate-400 space-y-2 mb-8">
+                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-emerald-500"></i> Instalación de Distros</li>
+                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-emerald-500"></i> Configuración Servidores</li>
+                    </ul>
+                </div>
+                <a href="https://t.me/jeanpirelag" target="_blank" class="w-full py-4 bg-emerald-500/10 hover:bg-emerald-500 text-emerald-400 hover:text-white rounded-2xl text-[10px] font-black uppercase tracking-widest text-center transition-all">Solicitar Soporte</a>
+            </div>
+
+            <div class="glass-card p-8 rounded-[2.5rem] border-white/5 hover:border-orange-500/30 transition-all flex flex-col justify-between">
+                <div>
+                    <div class="w-12 h-12 bg-orange-500/10 rounded-xl flex items-center justify-center mb-6">
+                        <i data-lucide="layers" class="w-6 h-6 text-orange-500"></i>
+                    </div>
+                    <h3 class="text-xl font-black text-white mb-3 tracking-tight">Software</h3>
+                    <ul class="text-sm text-slate-400 space-y-2 mb-8">
+                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-orange-500"></i> Apps de Diseño</li>
+                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-orange-500"></i> Optimización</li>
+                    </ul>
+                </div>
+                <a href="https://t.me/jeanpirelag" target="_blank" class="w-full py-4 bg-orange-500/10 hover:bg-orange-500 text-orange-400 hover:text-white rounded-2xl text-[10px] font-black uppercase tracking-widest text-center transition-all">Solicitar Soporte</a>
+            </div>
+        </div>
+    </section>
+
     <footer class="py-20 text-center border-t border-white/5">
         <div class="max-w-6xl mx-auto px-6">
-            <p class="text-slate-500 text-[10px] tracking-[0.4em] uppercase font-bold">© 2026 Melodico Projects | Jean
-                Pirela</p>
+            <p class="text-slate-500 text-[10px] tracking-[0.4em] uppercase font-bold">© 2026 Melodico Projects | Jean Pirela</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
     <script>lucide.createIcons();</script>
 </body>
-
 </html>
