--- a/index.html
+++ b/index.html
@@ -74,7 +74,27 @@
         <div class="grid md:grid-cols-5 gap-16 items-center">
             <div class="md:col-span-2">
                 <h2 class="text-4xl font-black text-white mb-6 italic">Labs<span class="text-emerald-500">_</span></h2>
-                <p class="text-slate-400 leading-relaxed mb-8">Herramientas de automatización y scripts personalizados.</p>
+                <p class="text-slate-400 leading-relaxed mb-8">
+                    Desarrollo de herramientas personalizadas para optimizar tareas repetitivas y extraer datos
+                    estratégicos mediante ingeniería de software.
+                </p>
+
+                <div class="mb-10">
+                    <p class="text-[9px] font-black text-slate-500 uppercase tracking-[0.3em] mb-4">Tech Stack</p>
+                    <div class="flex flex-wrap gap-2">
+                        <span
+                            class="px-3 py-1 bg-emerald-500/10 border border-emerald-500/20 rounded-lg text-[10px] font-bold text-emerald-400">Python</span>
+                        <span
+                            class="px-3 py-1 bg-yellow-500/10 border border-yellow-500/20 rounded-lg text-[10px] font-bold text-yellow-400">JavaScript</span>
+                        <span
+                            class="px-3 py-1 bg-green-500/10 border border-green-500/20 rounded-lg text-[10px] font-bold text-green-400">Node.js</span>
+                        <span
+                            class="px-3 py-1 bg-blue-500/10 border border-blue-500/20 rounded-lg text-[10px] font-bold text-blue-400">Selenium</span>
+                        <span
+                            class="px-3 py-1 bg-orange-500/10 border border-orange-500/20 rounded-lg text-[10px] font-bold text-orange-400">AutoHotkey</span>
+                    </div>
+                </div>
+
                 <a href="labs/index.html"
                     class="inline-flex items-center text-[10px] font-black text-white uppercase tracking-[0.3em] hover:text-emerald-400 transition-colors group">
                     Explorar todos los proyectos
@@ -83,19 +103,39 @@
                 </a>
             </div>
 
-            <div class="md:col-span-3">
-                <div class="glass-card p-10 rounded-[2.5rem] group border-emerald-500/10 transition-all duration-500">
-                    <div class="w-14 h-14 bg-emerald-500/10 rounded-2xl flex items-center justify-center mb-8">
-                        <i data-lucide="zap" class="w-7 h-7 text-emerald-500"></i>
+            <div class="md:col-span-3 grid gap-6">
+                <div
+                    class="glass-card p-8 rounded-[2.5rem] group border-emerald-500/10 transition-all duration-500 hover:border-emerald-500/30">
+                    <div class="flex justify-between items-start mb-6">
+                        <div class="w-12 h-12 bg-emerald-500/10 rounded-2xl flex items-center justify-center">
+                            <i data-lucide="chrome" class="w-6 h-6 text-emerald-500"></i>
+                        </div>
+                        <span
+                            class="text-[9px] font-black bg-emerald-500/20 text-emerald-400 px-3 py-1 rounded-full uppercase tracking-tighter">Productividad</span>
                     </div>
-                    <h3 class="text-3xl font-black text-white mb-4 tracking-tight">HiveMicro <span
-                            class="text-emerald-500 font-light italic">Enhancer</span></h3>
-                    <p class="text-slate-400 mb-8 leading-relaxed">Optimización avanzada para maximizar tus ingresos por hora.</p>
-                    <a href="labs/hivemicro.html"
-                        class="inline-flex items-center justify-center w-full bg-white text-black hover:bg-emerald-500 hover:text-white text-[10px] font-black py-5 rounded-2xl transition-all duration-300 uppercase tracking-[0.2em] group/btn shadow-xl">
-                        Detalles del Proyecto
-                        <i data-lucide="arrow-right"
-                            class="w-4 h-4 ml-2 group-hover/btn:translate-x-2 transition-transform"></i>
+                    <h3 class="text-2xl font-black text-white mb-2 tracking-tight">Software <span
+                            class="text-emerald-500 font-light italic">Automation</span></h3>
+                    <p class="text-sm text-slate-400 mb-6">Soluciones con <b>Selenium</b> y <b>AutoHotkey</b> para
+                        automatizar cualquier proceso en Windows o navegadores, eliminando el error humano.</p>
+                    <a href="https://t.me/jeanpirelag" target="_blank"
+                        class="text-[10px] font-black text-white uppercase tracking-widest hover:text-emerald-400 flex items-center transition-colors">
+                        Consultar Desarrollo <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
+                    </a>
+                </div>
+
+                <div
+                    class="glass-card p-8 rounded-[2.5rem] group border-white/5 transition-all duration-500 hover:border-emerald-500/30">
+                    <div class="w-12 h-12 bg-slate-800/50 rounded-2xl flex items-center justify-center mb-6">
+                        <i data-lucide="binary"
+                            class="w-6 h-6 text-slate-400 group-hover:text-emerald-500 transition-colors"></i>
+                    </div>
+                    <h3 class="text-2xl font-black text-white mb-2 tracking-tight">Node & Python <span
+                            class="text-emerald-500 font-light italic">Backend</span></h3>
+                    <p class="text-sm text-slate-400 mb-6">Bots de Telegram inteligentes y sistemas de <b>Web
+                            Scraping</b> de alta velocidad desarrollados en entornos robustos.</p>
+                    <a href="https://t.me/jeanpirelag" target="_blank"
+                        class="text-[10px] font-black text-white uppercase tracking-widest hover:text-emerald-400 flex items-center transition-colors">
+                        Cotizar Solución <i data-lucide="message-square" class="w-4 h-4 ml-2"></i>
                     </a>
                 </div>
             </div>
@@ -110,13 +150,16 @@
             </div>
 
             <div class="grid md:grid-cols-2 gap-10">
-                <div class="glass-card p-12 rounded-[3rem] group hover:-translate-y-2 transition-all duration-500 border-white/5 hover:border-blue-500/20 flex flex-col justify-between">
+                <div
+                    class="glass-card p-12 rounded-[3rem] group hover:-translate-y-2 transition-all duration-500 border-white/5 hover:border-blue-500/20 flex flex-col justify-between">
                     <div>
                         <div class="w-16 h-16 bg-blue-500/10 rounded-2xl flex items-center justify-center mb-10">
                             <i data-lucide="palette" class="w-8 h-8 text-blue-500"></i>
                         </div>
-                        <h3 class="text-2xl font-black text-white mb-4 uppercase tracking-tight">Diseño <br> Empresarial</h3>
-                        <p class="text-slate-400 mb-6 leading-relaxed">Construimos identidades visuales sólidas que comunican profesionalismo.</p>
+                        <h3 class="text-2xl font-black text-white mb-4 uppercase tracking-tight">Diseño <br> Empresarial
+                        </h3>
+                        <p class="text-slate-400 mb-6 leading-relaxed">Construimos identidades visuales sólidas que
+                            comunican profesionalismo.</p>
                         <ul class="text-[11px] font-bold text-slate-500 uppercase tracking-widest space-y-3 mb-10">
                             <li class="flex items-center group-hover:text-blue-400 transition-colors">
                                 <span class="w-1.5 h-1.5 rounded-full bg-blue-500 mr-3"></span> Logotipos & Branding
@@ -133,13 +176,16 @@
                     </a>
                 </div>
 
-                <div class="glass-card p-12 rounded-[3rem] group hover:-translate-y-2 transition-all duration-500 border-white/5 hover:border-orange-500/20 flex flex-col justify-between">
+                <div
+                    class="glass-card p-12 rounded-[3rem] group hover:-translate-y-2 transition-all duration-500 border-white/5 hover:border-orange-500/20 flex flex-col justify-between">
                     <div>
                         <div class="w-16 h-16 bg-orange-500/10 rounded-2xl flex items-center justify-center mb-10">
                             <i data-lucide="bike" class="w-8 h-8 text-orange-500"></i>
                         </div>
-                        <h3 class="text-2xl font-black text-white mb-4 uppercase tracking-tight">Rotulado <br> de Motos</h3>
-                        <p class="text-slate-400 mb-6 leading-relaxed">Personalización premium de alto impacto con materiales de alta gama.</p>
+                        <h3 class="text-2xl font-black text-white mb-4 uppercase tracking-tight">Rotulado <br> de Motos
+                        </h3>
+                        <p class="text-slate-400 mb-6 leading-relaxed">Personalización premium de alto impacto con
+                            materiales de alta gama.</p>
                         <ul class="text-[11px] font-bold text-slate-500 uppercase tracking-widest space-y-3 mb-10">
                             <li class="flex items-center group-hover:text-orange-400 transition-colors">
                                 <span class="w-1.5 h-1.5 rounded-full bg-orange-500 mr-3"></span> Kits Gráficos Custom
@@ -163,61 +209,79 @@
         <div class="mb-20">
             <h2 class="text-4xl font-black text-white mb-4 italic text-center md:text-left">Tech Support<span
                     class="text-indigo-500">_</span></h2>
-            <p class="text-slate-400 max-w-2xl text-center md:text-left">Soluciones de hardware y software para garantizar tu productividad.</p>
+            <p class="text-slate-400 max-w-2xl text-center md:text-left">Soluciones de hardware y software para
+                garantizar tu productividad.</p>
         </div>
 
         <div class="grid md:grid-cols-3 gap-8">
-            <div class="glass-card p-8 rounded-[2.5rem] border-white/5 hover:border-indigo-500/30 transition-all flex flex-col justify-between">
+            <div
+                class="glass-card p-8 rounded-[2.5rem] border-white/5 hover:border-indigo-500/30 transition-all flex flex-col justify-between">
                 <div>
                     <div class="w-12 h-12 bg-indigo-500/10 rounded-xl flex items-center justify-center mb-6">
                         <i data-lucide="monitor-dot" class="w-6 h-6 text-indigo-500"></i>
                     </div>
                     <h3 class="text-xl font-black text-white mb-3 tracking-tight">Físico & Remoto</h3>
                     <ul class="text-sm text-slate-400 space-y-2 mb-8">
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-indigo-500"></i> Limpieza profunda</li>
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-indigo-500"></i> Soporte Remoto</li>
+                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-indigo-500"></i>
+                            Limpieza profunda</li>
+                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-indigo-500"></i>
+                            Soporte Remoto</li>
                     </ul>
                 </div>
-                <a href="https://t.me/jeanpirelag" target="_blank" class="w-full py-4 bg-indigo-500/10 hover:bg-indigo-500 text-indigo-400 hover:text-white rounded-2xl text-[10px] font-black uppercase tracking-widest text-center transition-all">Solicitar Soporte</a>
+                <a href="https://t.me/jeanpirelag" target="_blank"
+                    class="w-full py-4 bg-indigo-500/10 hover:bg-indigo-500 text-indigo-400 hover:text-white rounded-2xl text-[10px] font-black uppercase tracking-widest text-center transition-all">Solicitar
+                    Soporte</a>
             </div>
 
-            <div class="glass-card p-8 rounded-[2.5rem] border-white/5 hover:border-emerald-500/30 transition-all flex flex-col justify-between">
+            <div
+                class="glass-card p-8 rounded-[2.5rem] border-white/5 hover:border-emerald-500/30 transition-all flex flex-col justify-between">
                 <div>
                     <div class="w-12 h-12 bg-emerald-500/10 rounded-xl flex items-center justify-center mb-6">
                         <i data-lucide="terminal" class="w-6 h-6 text-emerald-500"></i>
                     </div>
                     <h3 class="text-xl font-black text-white mb-3 tracking-tight">Linux OS</h3>
                     <ul class="text-sm text-slate-400 space-y-2 mb-8">
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-emerald-500"></i> Instalación de Distros</li>
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-emerald-500"></i> Configuración Servidores</li>
+                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-emerald-500"></i>
+                            Instalación de Distros</li>
+                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-emerald-500"></i>
+                            Configuración Servidores</li>
                     </ul>
                 </div>
-                <a href="https://t.me/jeanpirelag" target="_blank" class="w-full py-4 bg-emerald-500/10 hover:bg-emerald-500 text-emerald-400 hover:text-white rounded-2xl text-[10px] font-black uppercase tracking-widest text-center transition-all">Solicitar Soporte</a>
+                <a href="https://t.me/jeanpirelag" target="_blank"
+                    class="w-full py-4 bg-emerald-500/10 hover:bg-emerald-500 text-emerald-400 hover:text-white rounded-2xl text-[10px] font-black uppercase tracking-widest text-center transition-all">Solicitar
+                    Soporte</a>
             </div>
 
-            <div class="glass-card p-8 rounded-[2.5rem] border-white/5 hover:border-orange-500/30 transition-all flex flex-col justify-between">
+            <div
+                class="glass-card p-8 rounded-[2.5rem] border-white/5 hover:border-orange-500/30 transition-all flex flex-col justify-between">
                 <div>
                     <div class="w-12 h-12 bg-orange-500/10 rounded-xl flex items-center justify-center mb-6">
                         <i data-lucide="layers" class="w-6 h-6 text-orange-500"></i>
                     </div>
                     <h3 class="text-xl font-black text-white mb-3 tracking-tight">Software</h3>
                     <ul class="text-sm text-slate-400 space-y-2 mb-8">
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-orange-500"></i> Apps de Diseño</li>
-                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-orange-500"></i> Optimización</li>
+                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-orange-500"></i>
+                            Apps de Diseño</li>
+                        <li class="flex items-center"><i data-lucide="check" class="w-4 h-4 mr-2 text-orange-500"></i>
+                            Optimización</li>
                     </ul>
                 </div>
-                <a href="https://t.me/jeanpirelag" target="_blank" class="w-full py-4 bg-orange-500/10 hover:bg-orange-500 text-orange-400 hover:text-white rounded-2xl text-[10px] font-black uppercase tracking-widest text-center transition-all">Solicitar Soporte</a>
+                <a href="https://t.me/jeanpirelag" target="_blank"
+                    class="w-full py-4 bg-orange-500/10 hover:bg-orange-500 text-orange-400 hover:text-white rounded-2xl text-[10px] font-black uppercase tracking-widest text-center transition-all">Solicitar
+                    Soporte</a>
             </div>
         </div>
     </section>
 
     <footer class="py-20 text-center border-t border-white/5">
         <div class="max-w-6xl mx-auto px-6">
-            <p class="text-slate-500 text-[10px] tracking-[0.4em] uppercase font-bold">© 2026 Melodico Projects | Jean Pirela</p>
+            <p class="text-slate-500 text-[10px] tracking-[0.4em] uppercase font-bold">© 2026 Melodico Projects | Jean
+                Pirela</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
     <script>lucide.createIcons();</script>
 </body>
+
 </html>
